# kurs_cpp_podstawowy

./: .gitignore  README.md
Algorithms/AllCombination/: All_Combination.cpp  CMakeLists.txt
Day1/: kurs1_zadanie1.cc  kurs1_zadanie2.cc  kurs1_zadanie3.cc  zadanie1.cpp  zadanie3.cc  zadanie4.cc  zadanie5.cc
Day2/: zadanie1.cpp  zadanie2.cc  zadanie3.cpp  zadanie5.cc  zadanie6.cc  zadanie8.cpp  zadanie8_dla_ciekawskich.cc
Module1/: cpp_basics_outro.md  index.html  kurs1_zadanie3.cpp  kurs1_zadanie4.cpp  presentation_agenda.md  presentation_arrays.md  presentation_branches.md  presentation_functions.md  presentation_loops.md  presentation_types.md  zadanie1.cpp  zadanie2.cpp  zadanie4.cpp  zadanie5.cpp  zadanie6.cpp
PreWork/: good_example.cc  good_example.cpp  setup_ubuntu.md  setup_windows.md
SHM_version_for_advanced_with_few_mistakes/: CMakeLists.txt
SHM_version_for_advanced_with_few_mistakes/includes/: Alcohol.h  Cargo.h  CargoFactory.h  Fruit.h  Island.h  Item.h  Player.h  Ship.h  Store.h  TimeServiceLocator.h
SHM_version_for_advanced_with_few_mistakes/sources/: Alcohol.cc  CargoFactory.cc  Fruit.cc  Game.cc  Island.cc  Item.cc  Map.cc  Player.cc  Ship.cc  Store.cc  Time.cc  main.cc
SHM_version_for_advanced_with_few_mistakes/tests/: CMakeLists.txt  MockClasses.h  Module_tests.cc  Player_Cargo_tests.cc  Ship_tests.cc  Store_tests.cc  Test_values.h
SHM_version_for_beginers/: CMakeLists.txt
SHM_version_for_beginers/tests/: CMakeLists.txt  MockClasses.h  Module_tests.cc  Player_Cargo_tests.cc  Ship_tests.cc  Store_tests.cc
module1/: index.html  presentation_arrays.md  presentation_branches.md  presentation_functions.md  presentation_homework.md  presentation_loops.md  presentation_types.md  task1.cpp  task2.cpp  task3.cpp
module2/: index.html  presentation_homework.md  presentation_list.md  presentation_map.md  presentation_range_for.md  presentation_vector.md
module3/: index.html  presentation_enums.md  presentation_hazards.md  presentation_homework.md  presentation_pointers.md  presentation_references.md  presentation_scopes.md
zadanie1/: CMakeLists.txt  test_zadanie1.cc  test_zadanie1.cpp  zadanie1.cc
zadanie10/: CMakeLists.txt  test_zadanie10.cc
zadanie11/: CMakeLists.txt  test_zadanie11.cc  zadanie11.cpp
zadanie12/: CMakeLists.txt  test_zadanie12.cpp
zadanie13/: CMakeLists.txt  test_zadanie13.cpp
zadanie2/: CMakeLists.txt  test_zadanie2.cpp  zadanie2.cpp
zadanie3/: CMakeLists.txt  test_zadanie3.cc  zadanie3.cpp
zadanie5/: CMakeLists.txt  test_zadanie5.cc  zadanie5.cc
(+116 files in other folders)
